# ZKS-Tunnel-VPN

./: .gitignore  Cargo.toml  README.md  REMOTE_BROWSER_ISOLATION.md  ROADMAP.md  SECURITY_ANALYSIS.md  USAGE.md  VM2)  WASIF_VERNAM.md  ZKS-Revised_Protocol.md  ZKS_DCUtR.md  ZKS_Protocol_Paper.md  ZKS_Tunnel_Innovation_Paper.md  ZKS_Tunnel_Whitepaper.md  check_output.txt  check_output_2.txt  start_chain.bat
.github/workflows/: ci.yml  deploy-worker.yml  proverif.yml  release.yml  security-tests.yml  security.yml
Logs/: 0_Build Worker (WASM).txt  1_Build Client (macos-latest, x86_64-apple-darwin, zks-vpn).txt  2_Clippy.txt  3_Build Client (windows-latest, x86_64-pc-windows-msvc, zks-vpn.exe).txt  4_Build Client (ubuntu-latest, x86_64-unknown-linux-gnu, zks-vpn).txt  5_Format.txt  6_Test.txt  7_Check.txt
Logs/Build Client (macos-latest, x86_64-apple-darwin, zks-vpn)/: 12_Post Run actions_checkout@v4.txt  13_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Run dtolnay_rust-toolchain@stable.txt  4_Run Swatinem_rust-cache@v2.txt  5_Build release.txt  system.txt
Logs/Build Worker (WASM)/: system.txt  (+9 more)
verification/: MODEL_VS_IMPLEMENTATION.md  README.md  SECURITY_AUDIT.md  SECURITY_TESTING.md  WASIF_VERNAM_QUANTUM_PROOF.md  wasif_vernam_proof.pv  zks_handshake.pv  zks_handshake.spthy
zks-go-client/: main.go
zks-tunnel-client/: Cargo.toml  INTEGRATION_GUIDE.md  build_log.txt  check_log.txt  clippy_log.txt
zks-tunnel-client/src/: chain.rs  cli.rs  ct_ops.rs  dns_guard.rs  entropy_events.rs  entropy_tax.rs  entry_node.rs  exit_forwarder.rs  exit_node_udp.rs  exit_peer.rs  exit_service.rs  file_transfer.rs  http_proxy.rs  hybrid_data.rs  key_exchange.rs  key_rotation.rs  kill_switch.rs  lib.rs  linux_routing.rs  main.rs  p2p_client.rs  p2p_relay.rs  p2p_swarm.rs  p2p_vpn.rs  packet_pool.rs  replay_protection.rs  socks5.rs  stream_manager.rs  swarm.rs  swarm_controller.rs  swarm_entropy_collection.rs  tls_mimicry.rs  traffic_mixer.rs  traffic_shaping.rs  true_vernam.rs  tun_multiqueue.rs  tunnel.rs  userspace_nat.rs  utils.rs  vpn.rs  (+3 more)
zks-tunnel-client/src/dns_guard/: linux.rs  windows.rs
zks-tunnel-client/src/kill_switch/: linux.rs  stub.rs  windows.rs
zks-tunnel-client/tests/: swarm_repro.rs
zks-tunnel-proto/: Cargo.toml
zks-tunnel-proto/src/: lib.rs  message.rs
zks-tunnel-relay/: Cargo.toml  wrangler.toml
zks-tunnel-worker/: Cargo.toml  wrangler.toml
zks-tunnel-worker/src/: lib.rs  tunnel_session.rs
(+58 files in other folders)
