[workspace]
members = [
    "zks-tunnel-worker",
    "zks-tunnel-client", 
    "zks-tunnel-proto",
    "zks-tunnel-relay",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Md Wasif Faisal"]
repository = "https://github.com/user/ZKS_VPN"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
bytes = "1.5"
thiserror = "1.0"
getrandom = "0.2"
base64 = "0.22"
