[package]
name = "zks-tunnel-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ZKS-Tunnel Client - Local SOCKS5 proxy for VPN tunneling"

[[bin]]
name = "zks-vpn"
path = "src/main.rs"

[dependencies]
zks-tunnel-proto = { path = "../zks-tunnel-proto" }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
getrandom = { workspace = true }
base64 = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
