[package]
name = "zks-tunnel-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ZKS-Tunnel protocol definitions and shared types"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
